--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @global-self-service/DevOps stuart.clark@global.com peter.bell@global.com james.hunsdon@global.com
+* @global-platform/DevOps stuart.clark@global.com peter.bell@global.com james.hunsdon@global.com
